2004-06-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/alsaseq_c.c, interface/rtsyn_common.c,
	  timidity/playmidi.[ch], timidity/readmidi.c,
	  timidity/timidity.[ch]:
	  Interlock interfaces with -K and -T command options
	  Hack up force keysig calculation
	  Change the base of measure (bar) as 1 (was 0)

2004-06-14  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/loadtab.c, timidity/tables.[ch]:
	  Fix bug in -Z command option

2004-06-09 Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* timidity/reverb.c, timidity/tables.c,
	  doc/C/README.w32, doc/ja_JP.eucJP/README.w32:
	  small fixes for CbuilderX.

2004-06-02  Kentaro Sato <kentaro@ranvis.com>

	* utils/support.[ch]: Implemented subset of stat() for Mac OS.

2004-06-02  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* utils/support.h: add things to treat the case of no <sys/stat.h>
	* timidity/common.c: rebirth of HAVE_SYS_STAT_H

2004-06-01  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c (canonicalize_path): fix typo
	* timidity/common.c: fix compiling problem on VC6.

2004-05-31 Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* configure.in:
	  dynamic linked runtime library must be used with Open Watcom.

2004-05-31  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* timidity/common.c (open_file): ignore directories when searching
	  a normal file
	* timidity/timidity.c (main): suffix '/' is supplied to each argv
	  elems when the path IS a directory but IS NOT suffixed by '/'.

2004-05-31  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/instrum.h, timidity/instrum.c, timidity/m2m.c,
	  timidity/mod2midi.c, timidity/playmidi.c, timidity/sndfont.c:
	  root_freq_detected, transpose_detected, and chord variables
	  added to Sample type in instrum.h.  Pitch detection is applied
	  to drum and MOD samples if surround chorus is enabled.  This
	  allows the true pitch of the rendered voices to be determined,
	  so that surround chorus voice cancellation can be avoided by