@@ -386,7 +386,9 @@ static void ctl_pass_playing_list(int n, char *args[])
 		i = current_keysig - ((current_keysig < 8) ? 0 : 16), j = 0;
 		while (i != opt_force_keysig && i != opt_force_keysig + 12)
 			i += (i > 0) ? -5 : 7, j++;
-		note_key_offset = (j != 0 && opt_force_keysig < 0) ? j - 12 : j;
+		while (abs(j - note_key_offset) > 6)
+			j += (j > note_key_offset) ? -12 : 12;
+		note_key_offset = j;
 	}
 	i = current_keysig + ((current_keysig < 8) ? 7 : -9), j = 0;
 	while (i != 7)
